--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,24 @@
           <failOnMissingWebXml>false</failOnMissingWebXml>
         </configuration>
       </plugin>
+      <plugin>
+      	<groupId>org.mybatis.generator</groupId>
+      	<artifactId>mybatis-generator-maven-plugin</artifactId>
+      	<version>1.3.2</version>
+      	 <configuration>
+             <verbose>true</verbose>
+             <overwrite>true</overwrite>
+         </configuration>
+         <dependencies> 
+             <dependency> 
+			    <groupId>pagination</groupId> 
+			    <artifactId>pagination</artifactId> 
+			    <version>1.0</version> 
+			    <scope>system</scope> 
+			    <systemPath>${project.basedir}/WebRoot/WEB-INF/lib/pagination-plugin.jar</systemPath> 
+			</dependency> 
+         </dependencies> 
+      </plugin>
     </plugins>
   </build>
   <dependencies>  	
@@ -102,6 +120,21 @@
 	    <artifactId>commons-fileupload</artifactId>
 	    <version>1.3.1</version>
 	</dependency>
-	
+	<dependency>
+        <groupId>com.github.miemiedev</groupId>
+        <artifactId>mybatis-paginator</artifactId>
+        <version>1.2.17</version>
+    </dependency>
+	<dependency>
+	    <groupId>org.apache.commons</groupId>
+	    <artifactId>commons-lang3</artifactId>
+	    <version>3.4</version>
+	</dependency>
+	<dependency>
+	    <groupId>javax.servlet</groupId>
+	    <artifactId>javax.servlet-api</artifactId>
+	    <version>3.0.1</version>
+	</dependency>
+    
   </dependencies>
 </project>
