--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,11 @@
 	    <artifactId>javax.servlet-api</artifactId>
 	    <version>3.0.1</version>
 	</dependency>
+	<dependency>
+	    <groupId>cglib</groupId>
+	    <artifactId>cglib</artifactId>
+	    <version>3.1</version>
+	</dependency>
     
   </dependencies>
 </project>
