--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/pagination-plugin.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
