--- a/pom.xml
+++ b/pom.xml
@@ -156,5 +156,11 @@
 		    <artifactId>commons-lang</artifactId>
 		    <version>2.6</version>
 		</dependency>
+		<dependency>
+		    <groupId>javax.servlet.jsp</groupId>
+		    <artifactId>jsp-api</artifactId>
+		    <version>2.2</version>
+		</dependency>
+		
 	</dependencies>
 </project>
