--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,11 +1,11 @@
 driverClassName=com.mysql.jdbc.Driver
 validationQuery=SELECT 1
-jdbc_url=jdbc:mysql://localhost:3306/tywy?useUnicode=true&characterEncoding=UTF-8
-jdbc_username=root
-jdbc_password=111111
-#jdbc_url=jdbc:mysql://139.129.229.37:3306/tywy?useUnicode=true&characterEncoding=UTF-8
+#jdbc_url=jdbc:mysql://localhost:3306/tywy?useUnicode=true&characterEncoding=UTF-8
 #jdbc_username=root
-#jdbc_password=tywy123456
+#jdbc_password=111111
+jdbc_url=jdbc:mysql://139.129.229.37:3306/tywy?useUnicode=true&characterEncoding=UTF-8
+jdbc_username=root
+jdbc_password=tywy123456
 minPoolSize=10
 acquireRetryAttempts=50
 idleConnectionTestPeriod=60
