拉黑功能和post发送Json数据方法

--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,10 @@
 		    <artifactId>jsp-api</artifactId>
 		    <version>2.2</version>
 		</dependency>
-		
+		<dependency>
+		    <groupId>org.apache.httpcomponents</groupId>
+		    <artifactId>httpclient</artifactId>
+		    <version>4.5.2</version>
+		</dependency>
 	</dependencies>
 </project>
