完善公众号功能

--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -1,54 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" version="3.1">
-  <display-name>tywy</display-name>
-  <context-param>
-    <param-name>webAppRootKey</param-name>
-    <param-value>tywy</param-value>
-  </context-param>
-  <context-param>
-    <param-name>interfacePath</param-name>
-    <param-value>http://localhost:8080/tywy/</param-value>
-  </context-param>
-  <context-param>
-    <param-name>contextConfigLocation</param-name>
-    <param-value>classpath:spring.xml,classpath:spring-mybatis.xml</param-value>
-  </context-param>
-  <filter>
-    <description>字符集过滤器</description>
-    <filter-name>encodingFilter</filter-name>
-    <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
-    <init-param>
-      <description>字符集编码</description>
-      <param-name>encoding</param-name>
-      <param-value>UTF-8</param-value>
-    </init-param>
-  </filter>
-  <filter-mapping>
-    <filter-name>encodingFilter</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
-  <filter>
-    <filter-name>SystemFilter</filter-name>
-    <filter-class>com.tywy.web.SystemFilter</filter-class>
-  </filter>
-  <filter-mapping>
-    <filter-name>SystemFilter</filter-name>
-    <url-pattern>*.do</url-pattern>
-  </filter-mapping>
-  <listener>
-    <description>spring监听器</description>
-    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-  </listener>
-  <listener>
-    <listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
-  </listener>
-  <listener>
-    <description>load config.properties</description>
-    <listener-class>com.tywy.sc.base.listener.ConfigLoadListener</listener-class>
-  </listener>
-  
-  <!-- stream upload start-->
-  <servlet>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+	version="3.1">
+	<display-name>tywy</display-name>
+	<context-param>
+		<param-name>webAppRootKey</param-name>
+		<param-value>tywy</param-value>
+	</context-param>
+	<context-param>
+		<param-name>interfacePath</param-name>
+		<param-value>http://localhost:8080/tywy/</param-value>
+	</context-param>
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>classpath:spring.xml,classpath:spring-mybatis.xml</param-value>
+	</context-param>
+	<filter>
+		<description>字符集过滤器</description>
+		<filter-name>encodingFilter</filter-name>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<description>字符集编码</description>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>encodingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<filter>
+		<filter-name>SystemFilter</filter-name>
+		<filter-class>com.tywy.web.SystemFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>SystemFilter</filter-name>
+		<url-pattern>*.do</url-pattern>
+	</filter-mapping>
+	<listener>
+		<description>spring监听器</description>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+	<listener>
+		<listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
+	</listener>
+	<listener>
+		<description>load config.properties</description>
+		<listener-class>com.tywy.sc.base.listener.ConfigLoadListener</listener-class>
+	</listener>
+
+	<!-- stream upload start -->
+	<servlet>
 		<servlet-name>TokenServlet</servlet-name>
 		<servlet-class>com.tywy.utils.stream.servlet.TokenServlet</servlet-class>
 		<load-on-startup>0</load-on-startup>
@@ -75,25 +78,35 @@
 		<servlet-name>FormDataServlet</servlet-name>
 		<url-pattern>/fd</url-pattern>
 	</servlet-mapping>
+	<!-- stream upload end -->
 	
-	<!-- stream upload end-->
-  
-  <servlet>
-    <description>spring mvc servlet</description>
-    <servlet-name>springMvc</servlet-name>
-    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-    <init-param>
-      <description>spring mvc 配置文件</description>
-      <param-name>contextConfigLocation</param-name>
-      <param-value>classpath:spring-mvc.xml</param-value>
-    </init-param>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>springMvc</servlet-name>
-    <url-pattern>*.do</url-pattern>
-  </servlet-mapping>
-  <welcome-file-list>
-    <welcome-file>/index.jsp</welcome-file>
-  </welcome-file-list>
+	<!-- 微信公众号核心请求处理类 -->
+	<servlet>
+		<servlet-name>coreServlet</servlet-name>
+		<servlet-class>com.tywy.utils.wechat.CoreServlet</servlet-class>
+		<load-on-startup>0</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>coreServlet</servlet-name>
+		<url-pattern>/coreServlet</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<description>spring mvc servlet</description>
+		<servlet-name>springMvc</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<description>spring mvc 配置文件</description>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>classpath:spring-mvc.xml</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>springMvc</servlet-name>
+		<url-pattern>*.do</url-pattern>
+	</servlet-mapping>
+	<welcome-file-list>
+		<welcome-file>/index.jsp</welcome-file>
+	</welcome-file-list>
 </web-app>
