添加消息提示

--- a/src/main/resources/stream-config.properties
+++ b/src/main/resources/stream-config.properties
@@ -1,5 +1,5 @@
 # file stored repository (Chinese words need ASCII, help tool @http://tool.oschina.net/encode?type=3)
-STREAM_FILE_REPOSITORY=D:/Mywork/Server/tywy_file
+STREAM_FILE_REPOSITORY=C:/tywy_file
 
 # when the file has uploaded, whether delete it.
 STREAM_DELETE_FINISH=false
