--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,3 +1,7 @@
 wechat_pub_appID=wx4070528d2e9eedf6
 wechat_pub_appsecret=3961ea18f8ffe727b00e250596bb21a4
 wechat_pub_token=asdasqweqwiuouxcz
+
+default_hq_name=\u8FBD\u6E90
+default_hq_point_lng=125.133686
+default_hq_point_lat=42.923303
