--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	 <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<build>
+		<finalName>tywy</finalName>
 		<sourceDirectory>src</sourceDirectory>
 		<plugins>
 			<plugin>
