--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,35 @@
 	<properties>
 	 <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+	
+	<profiles>
+		<profile>
+			<id>test</id>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-antrun-plugin</artifactId>
+						<executions>
+							<execution>
+								<phase>compile</phase>
+								<configuration>
+									<tasks>
+										<copy todir="${basedir}/target/classes/" overwrite="true">
+											<fileset dir="D:/Mywork/Server/tywy_test/" />
+										</copy>
+									</tasks>
+								</configuration>
+								<goals>
+									<goal>run</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+	
 	<build>
 		<finalName>tywy</finalName>
 		<sourceDirectory>src</sourceDirectory>
